# legs_ros_ws

./: .gitignore  README.md  env_setup.bash  install_python_libs.bash  setup_mamba.sh
camera_bringup/: CMakeLists.txt
camera_bringup/config/: camLeft_info.yaml  camLeft_params.yaml
camera_bringup/launch/: left_camera_launch.py  realsense_d455.launch.py
camera_bringup/scripts/: auto_splat_sync_collector_node.py  enter_key_publisher_node.py  folder_image_publisher.py  image_visualization.py  img_depth_img_folder_to_rostopic.py  manual_left_zed_realsense_splat_collection_node.py  manual_realsense_splat_collection_node.py  manual_splat_collection_node.py  realsense_compressed_converter.py  uncompressed_synced_image_node.py
camera_bringup/src/: manual_splat_collection_node.cpp  synced_image_transport_node.cpp  uncompressed_realsense_image_transport_node.cpp  uncompressed_synced_image_transport_node.cpp  uncompressed_zed_realsense_image_transport_node.cpp
droid_slam_ros/: CMakeLists.txt  ros_node.py
droid_slam_ros/droid_backends.egg-info/: PKG-INFO
droid_slam_ros/droid_slam/: droid.py  trajectory_filler.py  visualization_viser.py
droid_slam_ros/evaluation_scripts/: test_d455.py  test_eth3d.py  test_zed.py
droid_slam_ros/scripts/: convert_d455_2_zed_folder_to_bag.py  convert_d455_corrected_zed_folder_to_bag.py  convert_d455_folder_to_bag.py  convert_grocery_store_to_bag.py  convert_zed_folder_to_bag.py  grocery_store_global_real_droid_subscriber_node_prime.py  karim_ptcloud_real_droid_subscriber_node_prime.py  multi_ptcloud_d455_2zed_global_real_droid_subscriber_node_prime.py  multi_ptcloud_d455_zed_global_real_droid_subscriber_node_prime.py  multi_ptcloud_global_real_droid_subscriber_node_prime.py  multi_real_droid_subscriber_node_prime.py  online_multi_ptcloud_d455_2zed_global_real_droid_subscriber_node_prime.py  ptcloud_d435_global_real_droid_subscriber_node_prime.py  ptcloud_d455_global_real_droid_subscriber_node_prime.py  ptcloud_real_droid_subscriber_node_prime.py  ptcloud_zed_global_real_droid_subscriber_node_prime.py  space_bundle_adjust_node.py  view_compressed_bag.py  view_multi_compressed_bag.py
droid_slam_ros/tools/: evaluate_d455.sh  evaluate_house.sh  evaluate_zed.sh
lifelong_msgs/msg/: ImagePoses.msg
py_pubsub/: setup.py
py_pubsub/py_pubsub/: bag_to_colmap.py  publisher_member_function.py  read_write_colmap.py
tri_model_ros_wrapper/: CMakeLists.txt  package.xml
tri_model_ros_wrapper/scripts/: left_tri_model_node.py  right_tri_model_node.py
zed-ros2-wrapper/zed_wrapper/config/: left_common.yaml  right_common.yaml
zed-ros2-wrapper/zed_wrapper/launch/: left_zed_camera.launch.py  right_zed_camera.launch.py
